# Ejercicios-Python

./: .gitignore  pyproject.toml  requirements.txt  setup  setup.sh
docs/source/: conf.py  index.rst  modules.rst  resta.rst  suma.rst
src/: add.py
